--- a/app/index.ejs
+++ b/app/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Hello World!</title>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+    <script src="js/uicore.js"></script>
     <link type="text/css" rel="stylesheet" href="./css/launcher.css">
 </head>
 <body style="background: #444;">
