create assets folder

--- a/app/index.ejs
+++ b/app/index.ejs
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Hello World!</title>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-    <script src="js/uicore.js"></script>
-    <link type="text/css" rel="stylesheet" href="./css/launcher.css">
+    <script src="./assets/js/uicore.js"></script>
+    <link type="text/css" rel="stylesheet" href="./assets/css/launcher.css">
 </head>
-<body style="background: #444;">
+<body style="background: #ddd;">
     <%- include('frame') %>
     <h1>Hello World!</h1>
     <p>
