--- a/app/frame.ejs
+++ b/app/frame.ejs
@@ -22,7 +22,7 @@
                     </button>
                 </div>
                 <div id="frameTitleDock">
-                    <span id="frameTitleText">TJMC-Launcher</span>
+                    <span id="frameTitleText"><script>document.write(document.title)</script></span>
                 </div>
             </div>
         <% } %>
