--- a/app/app.ejs
+++ b/app/app.ejs
@@ -18,7 +18,7 @@
         }
     </style>
 </head>
-<body style="background: #ddd;">
+<body>
     <%- include('frame') %>
     <div id="main">
         <%- include('main') %>
