--- a/app/main.ejs
+++ b/app/main.ejs
@@ -4,4 +4,12 @@
     Chrome <script>document.write(process.versions.chrome)</script>,
     и Electron <script>document.write(process.versions.electron)</script>.
 </p>
-<button>button</button>
+<div id="mainBar">
+    <input type="text" placeholder="Nick">
+    <select id="version">
+        <option selected value="s1">Чебурашка</option>
+        <option value="s2">Крокодил Гена</option>
+        <option value="s3">Шапокляк</option>
+        <option value="s4">Крыса Лариса</option>
+    </select>
+</div>
