--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -17,7 +17,7 @@
  * Element Styles                                                              *
  *                                                                             *
  ******************************************************************************/
-
+* {box-sizing: border-box;}
 /* Reset body, html, and div presets. */
 body, html, div {
     margin: 0px;
@@ -34,6 +34,7 @@ p {
 body, button {
     font-family: 'Minecraft Rus';
     background-color: #30303010;
+    color: white;
 }
 
 /*body {
@@ -209,4 +210,40 @@ body, button {
 }
 #frameButtonDarwin_restoredown:active {
     background-color: #bfff76;
+}
+
+/* =============================================== */
+
+#mainBar {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #00000081;
+    width: 100%;
+    height: 48px;
+}
+
+input[type="text"] {
+    top: 8px;
+    left: 8px;
+    padding: 4px;
+ }
+#version {
+    top: 8px;
+    left: 130px;
+}
+
+input, select {
+    border: 1px solid gray;
+    border-width: 0px 0px 1px 0px;
+    background: #1a1a1a !important;
+    outline: none;
+    height: 32px;
+    width: 184px;
+    color: #eee;
+    font-size: 15px;
+    font-family: 'Candara';
+    opacity: 0.8;
+    position: absolute;
 }
