--- a/app/main.ejs
+++ b/app/main.ejs
@@ -5,7 +5,7 @@
     и Electron <script>document.write(process.versions.electron)</script>.
 </p>
 <div id="mainBar">
-    <input type="text" placeholder="Nick">
+    <input type="text" placeholder="Ник">
     <select id="version">
         <option selected value="s1">Чебурашка</option>
         <option value="s2">Крокодил Гена</option>
