--- a/app/main.ejs
+++ b/app/main.ejs
@@ -4,8 +4,6 @@
     Chrome <script>document.write(process.versions.chrome)</script>,
     и Electron <script>document.write(process.versions.electron)</script>.
 </p>
-<div id="mainBar">
-    <input type="text" placeholder="Ник" id="nick">
-    <select id="version">
-    </select>
+<div id="topBar">
+    <div id="bar"></div>
 </div>
