--- a/app/app.ejs
+++ b/app/app.ejs
@@ -9,7 +9,6 @@
     <style>
         body {
             background: url(assets/images/default.png);
-            transition: 5s all ease;
             background-size: cover;
             -webkit-user-select: none;
             background-repeat: no-repeat;
@@ -18,10 +17,14 @@
         }
     </style>
 </head>
-<body style="background: #999">
+<body>
     <%- include('frame') %>
     <div id="main">
         <%- include('main') %>
+    </div>
+    <div id="mainBar">
+        <input type="text" placeholder="Ник" id="nick">
+        <select id="version"></select>
     </div>
 </body>
 </html>
