--- a/app/frame.ejs
+++ b/app/frame.ejs
@@ -1,6 +1,6 @@
 
 <div id="frameBar">
-    <div id="frameMain">
+    <div class="content">
         <%if (process.platform === 'darwin') { %>
             <div id="frameContentDarwin">
                 <div id="frameButtonDockDarwin">
