--- a/app/app.ejs
+++ b/app/app.ejs
@@ -32,5 +32,23 @@
             <button id="playButton">Играть</button>
         </div>
     </div>
+
+    <div id="overlay">
+        <div id="container">
+            <div id="overlayCloseButton">
+                <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24"><path fill="#dcddde" d="M18.4 4L12 10.4L5.6 4L4 5.6L10.4 12L4 18.4L5.6 20L12 13.6L18.4 20L20 18.4L13.6 12L20 5.6L18.4 4Z"></path></svg>
+            </div>
+            <h1>Header</h1>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et lobortis ante. Aenean tincidunt consequat orci, ac condimentum enim iaculis tempus. In dolor urna, accumsan at magna sed, euismod aliquet ipsum. Maecenas congue vehicula nibh, eu porttitor est. Aenean non justo vel eros imperdiet iaculis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aenean sed ex dui. Nam tempor scelerisque nunc ut convallis. Fusce vitae neque vel nibh fringilla gravida eget ut neque. Aliquam in risus ut nisi dictum pharetra. Maecenas magna erat, ornare porttitor vestibulum sit amet, pretium vitae purus. Ut a maximus ligula, at vehicula augue. Maecenas porttitor scelerisque risus, vel bibendum arcu porttitor non. Proin arcu dolor, placerat eu quam sit amet, scelerisque feugiat eros. Maecenas varius sollicitudin semper.
+
+Pellentesque sollicitudin sem id tristique placerat. Proin luctus enim libero, mattis consectetur purus luctus ut. Curabitur quam dolor, luctus sit amet tempus ac, faucibus at ipsum. Sed odio eros, placerat elementum lorem sed, finibus porttitor quam. Mauris a justo interdum neque sagittis vestibulum sit amet vitae magna. Curabitur ultricies elit metus, quis fermentum ante ullamcorper a. Phasellus efficitur pulvinar mauris, et feugiat sapien placerat id.
+
+Aliquam erat volutpat. Maecenas scelerisque dolor vel nibh luctus fringilla. Sed ultrices ac sem consectetur interdum. Sed blandit purus ut lorem vulputate, eget convallis neque rutrum. Mauris eu accumsan arcu. Nam sed nunc ipsum. In et felis commodo, aliquam ipsum at, pretium ligula. Phasellus molestie dolor ut purus egestas, ut dapibus tellus ornare. Ut pellentesque orci ut dolor accumsan efficitur. Mauris scelerisque ultrices diam sit amet egestas. Nam consequat nisi ac dui pretium, pharetra semper risus gravida. Nam ultricies arcu dui, vel pretium risus elementum euismod. Maecenas mollis convallis ante, eu auctor augue. Donec facilisis nulla nunc, at iaculis ipsum placerat nec.
+
+Aliquam viverra auctor ante vitae finibus. Fusce faucibus scelerisque purus ac vehicula. Duis ultrices orci maximus nisi ultrices, in dictum nunc commodo. Nam at orci lorem. Proin a semper odio. Fusce in est malesuada, lobortis elit ac, eleifend odio. Curabitur dictum at est eu tempor. Nulla tristique massa ac dolor tempor, id ornare turpis sagittis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec erat augue, vestibulum sit amet pretium a, mattis tempor sapien. Curabitur nec consectetur mauris. Sed in auctor ante, in commodo libero.
+
+Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Praesent eros justo, accumsan in cursus varius, placerat ut purus. Nulla id nulla quis elit imperdiet mollis. Ut vestibulum aliquam posuere. Donec elementum, ipsum ut tempus cursus, neque nunc lobortis diam, nec viverra arcu arcu non massa. Nam at quam erat. Nunc feugiat pellentesque leo et mollis. Duis tincidunt arcu eros, sit amet eleifend mauris rhoncus sed. Nunc ut tempor est. Curabitur at libero eget urna lobortis fringilla at et dolor. Donec vitae est enim. Etiam in interdum tortor. Duis porta lacus at orci gravida iaculis. Aliquam erat volutpat. Nunc congue tempor velit. Maecenas sollicitudin volutpat nisl id ornare.
+        </div>
+    </div>
 </body>
 </html>
