--- a/app/app.ejs
+++ b/app/app.ejs
@@ -35,8 +35,13 @@
 
     <div id="overlay">
         <div id="container">
-            <div id="overlayCloseButton">
-                <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24"><path fill="#dcddde" d="M18.4 4L12 10.4L5.6 4L4 5.6L10.4 12L4 18.4L5.6 20L12 13.6L18.4 20L20 18.4L13.6 12L20 5.6L18.4 4Z"></path></svg>
+            <div class="tools">
+                <div class="container">
+                    <div id="overlayCloseButton">
+                        <img src="./assets/css/cross.svg">
+                    </div>
+                    <div style="font-size: 16px; color: #616161;">ESC</div>
+                </div>
             </div>
             <h1>Header</h1>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et lobortis ante. Aenean tincidunt consequat orci, ac condimentum enim iaculis tempus. In dolor urna, accumsan at magna sed, euismod aliquet ipsum. Maecenas congue vehicula nibh, eu porttitor est. Aenean non justo vel eros imperdiet iaculis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aenean sed ex dui. Nam tempor scelerisque nunc ut convallis. Fusce vitae neque vel nibh fringilla gravida eget ut neque. Aliquam in risus ut nisi dictum pharetra. Maecenas magna erat, ornare porttitor vestibulum sit amet, pretium vitae purus. Ut a maximus ligula, at vehicula augue. Maecenas porttitor scelerisque risus, vel bibendum arcu porttitor non. Proin arcu dolor, placerat eu quam sit amet, scelerisque feugiat eros. Maecenas varius sollicitudin semper.
