--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: 'Minecraft Rus'; 
     src: url('minecraftia.ttf');
@@ -321,11 +320,14 @@ body, button {
 }
 
 #overlay.hidden #container {
-    transform: scale(0.3);
+    transform: scale(0.5);
     opacity: 0;
 }
 #overlay.hidden .tools {
-    transform: scale(2);
+    opacity: 0;
+}
+#overlay.hidden svg {
+    transform: scale(0);
     opacity: 0;
 }
 
@@ -377,6 +379,10 @@ body, button {
 
 #overlay p {
     margin: 2em 0;
+}
+
+#overlay svg {
+    transition: all 0.5s cubic-bezier(0.34, 1.56, 0.64, 1) 0.1s;    
 }
 
 ::-webkit-scrollbar {
