--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -333,19 +333,16 @@ body, button {
 
 #overlay .tools {
     transition: all 0.5s ease;
-    position: absolute;
-    top: 0;
-    right: -10px;
-    font-size: 16px;
-    font-family: 'Candara';
-}
-
-#overlay .tools .container {
     position: fixed;
+    top: 22px;
+    right: 0;
+    margin: 16px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 16px;
+    font-family: 'Candara';
 }
 
 #overlay .tools .keycode {
