--- a/app/main.ejs
+++ b/app/main.ejs
@@ -1,6 +1,6 @@
-<h1>Hello World!</h1>
+<!--<h1>Hello World!</h1>
 <p>
     Вы используете node <script>document.write(process.versions.node)</script>,
     Chrome <script>document.write(process.versions.chrome)</script>,
     и Electron <script>document.write(process.versions.electron)</script>.
-</p>
+</p>-->
