--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -13,11 +13,16 @@
 
 @keyframes box-shadow-rise {
     from {
-        box-shadow: 0 0 10px 0px #0000DF;
+        box-shadow: 0 0 10px 1px #0039DF;
     }
     to {
-        box-shadow: 0 0 50px 10px #1122FF;
+        box-shadow: 0 0 50px 15px #115FFF;
     }
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 /*******************************************************************************
  *                                                                             *
@@ -65,6 +70,7 @@ body, button {
 
 /* ================ Frame Bar ================ */
 #frameBar {
+    animation: fadein 1s !important;
     z-index: 100;
     display: flex;
     justify-content: center;
@@ -226,7 +232,7 @@ body, button {
 
 /* =============================================== */
 
-.preload #frameMain {
+.preload #app-mount {
     opacity: 0;
     visibility: hidden;
 }
@@ -238,6 +244,7 @@ body, button {
 }
 
 #preloader {
+    animation: fadein 1s !important;
     opacity: 0;
     visibility: hidden;
     position: absolute;
@@ -252,7 +259,7 @@ body, button {
 }
 #preloader img {
     animation: box-shadow-rise 2s infinite alternate ease-in-out !important;
-    box-shadow: 0 0 50px 20px #1122FF;
+    /*box-shadow: 0 0 50px 20px #1122FF;*/
     backface-visibility: hidden;
     border-radius: 50%;
     overflow: hidden;
@@ -274,13 +281,6 @@ body, button {
     top: -22px;
     opacity: 0;
     visibility: hidden;
-}
-
-#frameMain {
-    padding-top: 22px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
 }
 
 #main {
@@ -541,4 +541,48 @@ svg[data-icon="error-circle"] {
 }
 svg[data-icon="success-circle"] {
     color: #31e131;
+}
+
+/* =============== APP LAYERS =============== */
+
+#app-mount {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+#app-mount > .app-layer {
+    padding-top: 22px;
+    flex-direction: column;
+    transition: all 0.35s cubic-bezier(0.34, 1.56, 0.64, 1);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#app-mount > .app-layer {
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(0.7);
+}
+
+#app-mount #frameMain {
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(0.7);
+}
+
+#app-mount #frameSecond {
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(1.2);
+}
+
+#app-mount > .active {
+    opacity: 1 !important;
+    visibility: visible !important;
+    transform: none !important;
 }
